# gs_dashboard_experiment

./: Cargo.toml  README.md
html/: index.html
src/: main.rs  protocol.rs  sockets_handler.rs
